--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ nav a:hover {
 .work-content a {
 	font-weight: bold;
 	font-size: 1.5rem;
-	color: #142850;
+	color: #667eea;
 	text-decoration: none; /* enlever soulignement classique */
 	position: relative;
 	display: inline-block;
